minikube.yaml
# apiVersion: v1
# kind: Pod
# metadata:
#   name: tp04-1
#   namespace: ad
# spec:
#   containers:
#   - name: echo
#     image: registry.cluster.wik.cloud/public/echo
#     ports: 
#     - containerPort: 8080
# ---
# apiVersion: apps/v1
# kind: ReplicaSet
# metadata:
#   name: tp04-1
#   namespace: ad
#   labels:
#     tier: frontend
# spec:
#   replicas: 4
#   selector:
#     matchLabels:
#       tier: frontend
#   template:
#     metadata:
#       labels:
#         tier: frontend
#     spec:   
#       containers:
#       - name: echo
#         image: registry.cluster.wik.cloud/public/echo
#         ports: 
#         - containerPort: 8080
# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: tp04-1
#   namespace: ad
#   labels:
#     tier: frontend
# spec:
#   replicas: 4
#   strategy:
#     type: RollingUpdate
#     rollingUpdate:
#       maxSurge: 1
#       maxUnavailable: 50%
#   selector:
#     matchLabels:
#       tier: frontend
#   template:
#     metadata:
#       labels:
#         tier: frontend
#     spec:   
#       containers:
#       - name: echo
#         image: registry.cluster.wik.cloud/public/echo
#         ports: 
#         - containerPort: 8080
#---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: tp04-1
#   namespace: ad
#   labels:
#     tier: frontend
# spec:
#   replicas: 4
#   strategy:
#     type: RollingUpdate
#     rollingUpdate:
#       maxSurge: 1
#       maxUnavailable: 50%
#   selector:
#     matchLabels:
#       tier: frontend
#   template:
#     metadata:
#       labels:
#         tier: frontend
#     spec:   
#       containers:
#       - name: echo
#         image: registry.cluster.wik.cloud/public/echo
#         ports: 
#         - containerPort: 8080
#---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tp04-1
  namespace: ad
  labels:
    tier: frontend
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 50%
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata:
      labels:
        tier: frontend
    spec:   
      containers:
      - name: echo
        image: registry.cluster.wik.cloud/public/echo
        ports: 
        - containerPort: 8080
